perf: fix thread-model scaling issues (Phase 4)
- WorldClientService: run the blocking inter-server REST calls on a dedicated
  virtual-thread executor instead of ForkJoinPool.commonPool(). The blocking
  calls (RestTemplate up to the socket timeout) could otherwise starve the
  shared commonPool under high concurrency (broadcasts).
- PlayerSessionPersistenceService: start the per-session tick loop as a virtual
  thread instead of a dedicated platform thread. Thousands of sessions no
  longer mean thousands of ~1MB platform threads; interrupt()-based stop is
  unchanged.

Behebt Fix-Plan Phase 4 (Thread-Modell: commonPool, thread-per-session).
AccessService.devSessionLogin (Thread.sleep in @Transactional) bleibt offen
(braucht Transaktions-Refactor + Login-Flow-Verifikation).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>